--- a/index.html
+++ b/index.html
@@ -130,7 +130,76 @@
     </section>
 
     <section class="about-me-section">
-        
+        <div class="about-me-card">
+            <h1 class="title">About Myself</h1>
+            <p class="about-job">
+                Hello I’m a software developer! I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.
+            </p>
+            <h2 class="connect-link">LET'S CONNECT</h2>
+            <div class="social-media-icons">
+                <div class="social-media-links">
+                        <div class="icons">
+                            <a href="#">
+                                <img src="/images/github-logo.png" alt="Github icon">
+                            </a>
+                        </div>
+                        <div class="icons">
+                            <a href="#">
+                                <img src="/images/Linkedin icon.png" alt="Linken icon">
+                            </a>
+                        </div>
+                        <div class="icons">
+                            <a href="#">
+                                <img src="/images/angel-list-logo.png" alt="angel-list icon">
+                            </a>
+                        </div>   
+                        <div class="icons">
+                            <a href="#">
+                                <img src="/images/twitter-logo.png" alt="Twitter icon">
+                            </a>
+                        </div>
+                        <div class="icons">
+                            <a href="#">
+                                <img src="/images/medium-icon.png" alt="Medium icon">
+                            </a>
+                        </div>
+                </div>
+            </div>
+            <div class="get-my-resume-button">
+                <button class="get-my-resume">
+                  Get my resume
+                </button>
+            </div>
+        </div>
+
+        <div class="language-card">
+            <div class="languages">
+                <p>languages</p>
+                <a href="#"><img src="/icons/dropdown-icon.png" alt="dropdown icon"></a>
+            </div>
+            <div class="language-list">
+                <div class="js-section">
+                    <img class="js-icon" src="/snapshoots/javascript icon.png" alt="">
+                    <p>JavaScript</p>
+                </div>
+                <div class="html-section">
+                    <img class="html-icon" src="/snapshoots/Html icon.png" alt="">
+                    <p>HTML</p>
+                </div>
+                <div class="css-section">
+                    <img class="css-icon" src="/snapshoots/css icon.jpg" alt="">
+                    <p>CSS</p>
+                </div>
+            </div>
+            <div class="frameworks">
+                <p>Frameworks</p>
+                <a href="#"><img src="/icons/expand-icon.png" alt="dropdown icon"></a>
+            </div>
+            <div class="skills">
+                <p>Skills</p>
+                <a href="#"><img src="/icons/expand-icon.png" alt="dropdown icon"></a>
+            </div>
+        </div> 
     </section>
 </body>
 </html>
