finished button work

--- a/index.html
+++ b/index.html
@@ -52,16 +52,7 @@
                 </div>
             </div>
     </section>
-</body>
-</html><!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio project</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+
     <section class="work-section">
         <div class="work-card">
             
@@ -86,8 +77,8 @@
                 <a href="#" class="subjects">CSS</a>
                 <a href="#" class="subjects">JavaScript</a>
             </div>
-            <div class="see-project-button">
-              <button class="see-project">
+            <div class="buttons">
+              <button type="button" class="button">
                 See project
               </button>
             </div>
@@ -102,9 +93,9 @@
             <div class="details">
                 <p class="name">CANOPY</p>
                 <img src="/snapshoots/Counter.svg" alt="counter icon">
-                <p class="position" style="color: #7A869A;"> Back End Dev</p>
+                <p class="position"> Back End Dev</p>
                 <img src="/snapshoots/Counter.svg" alt="counter icon">
-                <p class="year" style="color: #7A869A;">2015</p>
+                <p class="year">2015</p>
             </div>
 
             <div class="about-job">
@@ -116,8 +107,8 @@
                 <a href="#" class="subjects">CSS</a>
                 <a href="#" class="subjects">JavaScript</a>
             </div>
-            <div class="see-project-button">
-              <button class="see-project">
+            <div class="buttons">
+              <button type="button" class="button">
                 See project
               </button>
             </div>
@@ -132,9 +123,9 @@
             <div class="details">
                 <p class="name">TONIC</p>
                 <img src="/snapshoots/Counter.svg" alt="counter icon">
-                <p class="position" style="color: #7A869A;"> Back End Dev</p>
+                <p class="position"> Back End Dev</p>
                 <img src="/snapshoots/Counter.svg" alt="counter icon">
-                <p class="year" style="color: #7A869A;">2015</p>
+                <p class="year">2015</p>
             </div>
 
             <div class="about-job">
@@ -146,8 +137,8 @@
                 <a href="#" class="subjects">CSS</a>
                 <a href="#" class="subjects">JavaScript</a>
             </div>
-            <div class="see-project-button">
-              <button class="see-project">
+            <div class="buttons">
+              <button type="button" class="button">
                 See project
               </button>
             </div>
@@ -162,9 +153,9 @@
             <div class="details">
                 <p class="name">CANOPY</p>
                 <img src="/snapshoots/Counter.svg" alt="counter icon">
-                <p class="position" style="color: #7A869A;"> Back End Dev</p>
+                <p class="position"> Back End Dev</p>
                 <img src="/snapshoots/Counter.svg" alt="counter icon">
-                <p class="year" style="color: #7A869A;">2015</p>
+                <p class="year">2015</p>
             </div>
 
             <div class="about-job">
@@ -176,8 +167,8 @@
                 <a href="#" class="subjects">CSS</a>
                 <a href="#" class="subjects">JavaScript</a>
             </div>
-            <div class="see-project-button">
-              <button class="see-project">
+            <div class="buttons">
+              <button type="button" class="button">
                 See project
               </button>
             </div>
@@ -220,8 +211,8 @@
                         </div>
                 </div>
             </div>
-            <div class="get-my-resume-button">
-                <button class="get-my-resume">
+            <div class="buttons">
+                <button type="button" class="button">
                   Get my resume
                 </button>
             </div>
