error first attempt

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
             <div class="details">
                 <p class="name">CANOPY</p>
                 <img src="/snapshoots/Counter.svg" alt="counter icon">
-                <p class="position" style="color: #7A869A;"> Back End Dev</p>
+                <p class="position"> Back End Dev</p>
                 <img src="/snapshoots/Counter.svg" alt="counter icon">
-                <p class="year" style="color: #7A869A;">2015</p>
+                <p class="year">2015</p>
             </div>
 
             <div class="about-job">
