fixed capital letter in languages

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
         <div class="language-card">
             <div class="languages">
-                <p>languages</p>
+                <p>Languages</p>
                 <a href="#"><img src="/icons/dropdown-icon.png" alt="dropdown icon"></a>
             </div>
             <div class="language-list">
