--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <form action="https://formspree.io/yenainglinn7@gmail.com" method="post">
+  <form action="https://formspree.io/f/mknllnbq" method="post">
 
     <h1 class="contact-me">Contact me</h1>
   
