add hover effects

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             My Logo
         </div>
         <div class="nav-links-container">
-            <a href="" class="nav-links">Portfolio</a>
-            <a href="" class="nav-links">About</a>
-            <a href="" class="nav-links">Contact</a>
+            <a href="#" class="nav-links">Portfolio</a>
+            <a href="#" class="nav-links">About</a>
+            <a href="#" class="nav-links">Contact</a>
         </div>
 
         <nav class="Hamburger-menu">
@@ -275,7 +275,7 @@
             <label for="message"></label>
             <textarea name="message" id="message" placeholder="Write your message here..." maxlength="500" required></textarea>
         
-            <button type="submit">Get in touch</button>
+            <button type="submit" class="button">Get in touch</button>
           </form>
     </section>
 </body>
