--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             My Logo
         </div>
         <nav class="Hamburger-menu">
-            <a href=""><img src="/images/Union.png" alt="Hamburger Menu"></a>
+            <a href="#"><img src="./images/Union.png" alt="Hamburger Menu"></a>
         </nav>
     </header>
 
