--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             </div>
         </div> 
     </section>
-    <section>
+    <section class="form-section">
         <form action="https://formspree.io/f/mknllnbq" method="post">
 
             <h1 class="contact-me">Contact me</h1>
