add desktop menu highlights

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             My Logo
         </div>
         <div class="nav-links-container">
-            <a href="#portfolioSection" class="nav-links">Portfolio</a>
-            <a href="#aboutSection" class="nav-links">About</a>
-            <a href="#contactSection" class="nav-links">Contact</a>
+            <a href="#portfolioSection" class="portfolioSection">Portfolio</a>
+            <a href="#aboutSection" class="aboutSection">About</a>
+            <a href="#contactSection" class="contactSection">Contact</a>
         </div>
 
         <nav class="Hamburger-menu" id="openMenuBtn">
@@ -286,7 +286,7 @@
             <button type="submit" class="button">Get in touch</button>
         </form>
     </section>
-    <section class="mobile-menu hidden">
+    <div class="mobile-menu hidden">
         <div class="x-btn">
             <a id="closeMenuBtn" href="#" onclick="return false;"><img src="./icons/Enabled.png" alt=""></a>
         </div>
@@ -296,7 +296,7 @@
             <a id="menu2" href="#aboutSection">About</a>
             <a id="menu3" href="#contactSection">Contact</a>
         </div>
-    </section>
+    </div>
     <script src="./script.js"></script>
 </body>
 
