add popup windows

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <a href="#" onclick="return false;" class="subjects">JavaScript</a>
                 </div>
                 <div class="buttons">
-                    <button type="button" class="button">
+                    <button id="seeproject1" type="button" class="button">
                         See project
                     </button>
                 </div>
@@ -117,7 +117,7 @@
                     <a href="#" onclick="return false;" class="subjects">JavaScript</a>
                 </div>
                 <div class="buttons">
-                    <button type="button" class="button">
+                    <button id="seeproject2" type="button" class="button">
                         See project
                     </button>
                 </div>
@@ -150,7 +150,7 @@
                     <a href="#" onclick="return false;" class="subjects">JavaScript</a>
                 </div>
                 <div class="buttons">
-                    <button type="button" class="button">
+                    <button id="seeproject3" type="button" class="button">
                         See project
                     </button>
                 </div>
@@ -182,7 +182,7 @@
                     <a href="#" onclick="return false;" class="subjects">JavaScript</a>
                 </div>
                 <div class="buttons">
-                    <button type="button" class="button">
+                    <button id="seeproject4" type="button" class="button">
                         See project
                     </button>
                 </div>
@@ -286,15 +286,196 @@
             <button type="submit" class="button">Get in touch</button>
         </form>
     </section>
+    <!-- mobile menu -->
     <div class="mobile-menu hidden">
         <div class="x-btn">
             <a id="closeMenuBtn" href="#" onclick="return false;"><img src="./icons/Enabled.png" alt=""></a>
         </div>
-        
+
         <div class="menu-lists">
             <a id="menu1" href="#portfolioSection">Portfolio</a>
             <a id="menu2" href="#aboutSection">About</a>
             <a id="menu3" href="#contactSection">Contact</a>
+        </div>
+    </div>
+    <!-- popup window -->
+    <div class="popupWindow1 hidden">
+        <div class="popupWindowContainer">
+            <div class="popupTop">
+                <h1 class="title">Tonic</h1>
+                <a class="a1" id="closeMenuBtn1" href="#" onclick="return false;"><img src="./images/Icon - Cancel.svg"
+                        alt=""></a>
+            </div>
+
+            <div class="details">
+                <p class="name">CANOPY</p>
+                <img src="./snapshoots/Counter.svg" alt="counter icon">
+                <p class="position"> Back End Dev</p>
+                <img src="./snapshoots/Counter.svg" alt="counter icon">
+                <p class="year">2015</p>
+            </div>
+
+            <img class="snapshoot-portfolio" src="./snapshoots/work portfolio.png" alt="">
+
+            <div class="about-job">
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's
+                    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                    scrambled it to
+                    make a type specimen book. It has survived not only five centuries, but also the leap into
+                    electronic typesetting,
+                    remaining essent
+                </p>
+            </div>
+
+            <div class="subject-pictures">
+                <a href="#" onclick="return false;" class="subjects">HTML</a>
+                <a href="#" onclick="return false;" class="subjects">CSS</a>
+                <a href="#" onclick="return false;" class="subjects">JavaScript</a>
+            </div>
+            <div class="buttons">
+                <button type="button" class="button liveBtn">
+                    See live <img src="./icons/Icon - Export.svg" alt="">
+                </button>
+                <button type="button" class="button sourceBtn">
+                    See source <img src="./icons/Frame.png" alt="">
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <div class="popupWindow2 hidden">
+        <div class="popupWindowContainer">
+            <div class="popupTop">
+                <h1 class="title">Multi-Post Stories</h1>
+                <a class="a2" id="closeMenuBtn2" href="#" onclick="return false;"><img src="./images/Icon - Cancel.svg"
+                        alt=""></a>
+            </div>
+
+            <div class="details">
+                <p class="name">FACEBOOK</p>
+                <img src="./snapshoots/Counter.svg" alt="counter icon">
+                <p class="position"> Back End Dev</p>
+                <img src="./snapshoots/Counter.svg" alt="counter icon">
+                <p class="year">2015</p>
+            </div>
+
+            <img class="snapshoot-portfolio" src="./snapshoots/work portfolio 2.png" alt="">
+
+            <div class="about-job">
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's
+                    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                    scrambled it to
+                    make a type specimen book. It has survived not only five centuries, but also the leap into
+                    electronic typesetting,
+                    remaining essent
+                </p>
+            </div>
+
+            <div class="subject-pictures">
+                <a href="#" onclick="return false;" class="subjects">HTML</a>
+                <a href="#" onclick="return false;" class="subjects">CSS</a>
+                <a href="#" onclick="return false;" class="subjects">JavaScript</a>
+            </div>
+            <div class="buttons">
+                <button type="button" class="button liveBtn">
+                    See live <img src="./icons/Icon - Export.svg" alt="">
+                </button>
+                <button type="button" class="button sourceBtn">
+                    See source <img src="./icons/Frame.png" alt="">
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <div class="popupWindow3 hidden">
+        <div class="popupWindowContainer">
+            <div class="popupTop">
+                <h1 class="title">Facebook 360</h1>
+                <a class="a3" id="closeMenuBtn3" href="#" onclick="return false;"><img src="./images/Icon - Cancel.svg"
+                        alt=""></a>
+            </div>
+
+            <div class="details">
+                <p class="name">FACEBOOK</p>
+                <img src="./snapshoots/Counter.svg" alt="counter icon">
+                <p class="position"> Back End Dev</p>
+                <img src="./snapshoots/Counter.svg" alt="counter icon">
+                <p class="year">2015</p>
+            </div>
+
+            <img class="snapshoot-portfolio" src="./snapshoots/work portfolio 3.png" alt="">
+
+            <div class="about-job">
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's
+                    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                    scrambled it to
+                    make a type specimen book. It has survived not only five centuries, but also the leap into
+                    electronic typesetting,
+                    remaining essent
+                </p>
+            </div>
+
+            <div class="subject-pictures">
+                <a href="#" onclick="return false;" class="subjects">HTML</a>
+                <a href="#" onclick="return false;" class="subjects">CSS</a>
+                <a href="#" onclick="return false;" class="subjects">JavaScript</a>
+            </div>
+            <div class="buttons">
+                <button type="button" class="button liveBtn">
+                    See live <img src="./icons/Icon - Export.svg" alt="">
+                </button>
+                <button type="button" class="button sourceBtn">
+                    See source <img src="./icons/Frame.png" alt="">
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <div class="popupWindow4 hidden">
+        <div class="popupWindowContainer">
+            <div class="popupTop">
+                <h1 class="title">Uber Navigation</h1>
+                <a class="a4" id="closeMenuBtn4" href="#" onclick="return false;"><img src="./images/Icon - Cancel.svg"
+                        alt=""></a>
+            </div>
+
+            <div class="details">
+                <p class="name">Uber</p>
+                <img src="./snapshoots/Counter.svg" alt="counter icon">
+                <p class="position"> Lead Developer </p>
+                <img src="./snapshoots/Counter.svg" alt="counter icon">
+                <p class="year">2018</p>
+            </div>
+
+            <img class="snapshoot-portfolio" src="./snapshoots/work portfolio 4.png" alt="">
+
+            <div class="about-job">
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's
+                    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+                    scrambled it to
+                    make a type specimen book. It has survived not only five centuries, but also the leap into
+                    electronic typesetting,
+                    remaining essent
+                </p>
+            </div>
+
+            <div class="subject-pictures">
+                <a href="#" onclick="return false;" class="subjects">HTML</a>
+                <a href="#" onclick="return false;" class="subjects">CSS</a>
+                <a href="#" onclick="return false;" class="subjects">JavaScript</a>
+            </div>
+            <div class="buttons">
+                <button type="button" class="button liveBtn">
+                    See live <img src="./icons/Icon - Export.svg" alt="">
+                </button>
+                <button type="button" class="button sourceBtn">
+                    See source <img src="./icons/Frame.png" alt="">
+                </button>
+            </div>
         </div>
     </div>
     <script src="./script.js"></script>
