--- a/index.html
+++ b/index.html
@@ -310,12 +310,14 @@
             <div class="details">
                 <p class="name">CANOPY</p>
                 <img src="./snapshoots/Counter.svg" alt="counter icon">
-                <p class="position"> Back End Dev</p>
+                <p class="position">Back End Dev</p>
                 <img src="./snapshoots/Counter.svg" alt="counter icon">
                 <p class="year">2015</p>
             </div>
 
-            <img class="snapshoot-portfolio" src="./snapshoots/work portfolio.png" alt="">
+            <div class="popupImage1">
+                <img src="./snapshoots/work portfolio.png" alt="">
+            </div>
 
             <div class="about-job">
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
@@ -360,7 +362,9 @@
                 <p class="year">2015</p>
             </div>
 
-            <img class="snapshoot-portfolio" src="./snapshoots/work portfolio 2.png" alt="">
+            <div class="popupImage2">
+                <img src="./snapshoots/work portfolio 2.png" alt="">
+            </div>
 
             <div class="about-job">
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
@@ -405,7 +409,9 @@
                 <p class="year">2015</p>
             </div>
 
-            <img class="snapshoot-portfolio" src="./snapshoots/work portfolio 3.png" alt="">
+            <div class="popupImage3">
+                <img src="./snapshoots/work portfolio 3.png" alt="">
+            </div>
 
             <div class="about-job">
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
@@ -449,8 +455,10 @@
                 <img src="./snapshoots/Counter.svg" alt="counter icon">
                 <p class="year">2018</p>
             </div>
-
-            <img class="snapshoot-portfolio" src="./snapshoots/work portfolio 4.png" alt="">
+            <div class="popupImage4">
+                <img src="./snapshoots/work portfolio 4.png" alt="">
+            </div>
+            
 
             <div class="about-job">
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
