fix desktop version

--- a/index.html
+++ b/index.html
@@ -319,29 +319,37 @@
                 <img src="./snapshoots/work portfolio.png" alt="">
             </div>
 
-            <div class="about-job">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's
-                    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                    scrambled it to
-                    make a type specimen book. It has survived not only five centuries, but also the leap into
-                    electronic typesetting,
-                    remaining essent
-                </p>
-            </div>
+            <div class="popupfooter">
+                <div class="about-job">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                        of type and scrambled it 1960s. Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry.
 
-            <div class="subject-pictures">
-                <a href="#" onclick="return false;" class="subjects">HTML</a>
-                <a href="#" onclick="return false;" class="subjects">CSS</a>
-                <a href="#" onclick="return false;" class="subjects">JavaScript</a>
-            </div>
-            <div class="buttons">
-                <button type="button" class="button liveBtn">
-                    See live <img src="./icons/Icon - Export.svg" alt="">
-                </button>
-                <button type="button" class="button sourceBtn">
-                    See source <img src="./icons/Frame.png" alt="">
-                </button>
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                        printer took a galley of type and scrambled it 1960s with the releorem Ipsum is simply dummy
+                        text of the printing and typesetting industry. Lorem Ipsum han printer took a galley of type and
+                        scrambled it 1960s with the releawn printer took a galley of type and scrambled it 1960s.
+                    </p>
+                </div>
+                <div class="right-box">
+                    <div class="subject-pictures">
+                        <a href="#" onclick="return false;" class="subjects">HTML</a>
+                        <a href="#" onclick="return false;" class="subjects">CSS</a>
+                        <a href="#" onclick="return false;" class="subjects">JavaScript</a>
+                    </div>
+                    <div class="divider">
+                        <img src="./images/Vector 4.png" alt="">
+                    </div>
+                    <div class="buttons">
+                        <button type="button" class="button liveBtn">
+                            See live <img src="./icons/Icon - Export.svg" alt="">
+                        </button>
+                        <button type="button" class="button sourceBtn">
+                            See source <img src="./icons/Frame.png" alt="">
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -366,29 +374,37 @@
                 <img src="./snapshoots/work portfolio 2.png" alt="">
             </div>
 
-            <div class="about-job">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's
-                    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                    scrambled it to
-                    make a type specimen book. It has survived not only five centuries, but also the leap into
-                    electronic typesetting,
-                    remaining essent
-                </p>
-            </div>
+            <div class="popupfooter">
+                <div class="about-job">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                        of type and scrambled it 1960s. Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry.
 
-            <div class="subject-pictures">
-                <a href="#" onclick="return false;" class="subjects">HTML</a>
-                <a href="#" onclick="return false;" class="subjects">CSS</a>
-                <a href="#" onclick="return false;" class="subjects">JavaScript</a>
-            </div>
-            <div class="buttons">
-                <button type="button" class="button liveBtn">
-                    See live <img src="./icons/Icon - Export.svg" alt="">
-                </button>
-                <button type="button" class="button sourceBtn">
-                    See source <img src="./icons/Frame.png" alt="">
-                </button>
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                        printer took a galley of type and scrambled it 1960s with the releorem Ipsum is simply dummy
+                        text of the printing and typesetting industry. Lorem Ipsum han printer took a galley of type and
+                        scrambled it 1960s with the releawn printer took a galley of type and scrambled it 1960s.
+                    </p>
+                </div>
+                <div class="right-box">
+                    <div class="subject-pictures">
+                        <a href="#" onclick="return false;" class="subjects">HTML</a>
+                        <a href="#" onclick="return false;" class="subjects">CSS</a>
+                        <a href="#" onclick="return false;" class="subjects">JavaScript</a>
+                    </div>
+                    <div class="divider">
+                        <img src="./images/Vector 4.png" alt="">
+                    </div>
+                    <div class="buttons">
+                        <button type="button" class="button liveBtn">
+                            See live <img src="./icons/Icon - Export.svg" alt="">
+                        </button>
+                        <button type="button" class="button sourceBtn">
+                            See source <img src="./icons/Frame.png" alt="">
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -413,29 +429,37 @@
                 <img src="./snapshoots/work portfolio 3.png" alt="">
             </div>
 
-            <div class="about-job">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's
-                    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                    scrambled it to
-                    make a type specimen book. It has survived not only five centuries, but also the leap into
-                    electronic typesetting,
-                    remaining essent
-                </p>
-            </div>
+            <div class="popupfooter">
+                <div class="about-job">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                        of type and scrambled it 1960s. Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry.
 
-            <div class="subject-pictures">
-                <a href="#" onclick="return false;" class="subjects">HTML</a>
-                <a href="#" onclick="return false;" class="subjects">CSS</a>
-                <a href="#" onclick="return false;" class="subjects">JavaScript</a>
-            </div>
-            <div class="buttons">
-                <button type="button" class="button liveBtn">
-                    See live <img src="./icons/Icon - Export.svg" alt="">
-                </button>
-                <button type="button" class="button sourceBtn">
-                    See source <img src="./icons/Frame.png" alt="">
-                </button>
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                        printer took a galley of type and scrambled it 1960s with the releorem Ipsum is simply dummy
+                        text of the printing and typesetting industry. Lorem Ipsum han printer took a galley of type and
+                        scrambled it 1960s with the releawn printer took a galley of type and scrambled it 1960s.
+                    </p>
+                </div>
+                <div class="right-box">
+                    <div class="subject-pictures">
+                        <a href="#" onclick="return false;" class="subjects">HTML</a>
+                        <a href="#" onclick="return false;" class="subjects">CSS</a>
+                        <a href="#" onclick="return false;" class="subjects">JavaScript</a>
+                    </div>
+                    <div class="divider">
+                        <img src="./images/Vector 4.png" alt="">
+                    </div>
+                    <div class="buttons">
+                        <button type="button" class="button liveBtn">
+                            See live <img src="./icons/Icon - Export.svg" alt="">
+                        </button>
+                        <button type="button" class="button sourceBtn">
+                            See source <img src="./icons/Frame.png" alt="">
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -458,31 +482,41 @@
             <div class="popupImage4">
                 <img src="./snapshoots/work portfolio 4.png" alt="">
             </div>
-            
 
-            <div class="about-job">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-                    industry's
-                    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-                    scrambled it to
-                    make a type specimen book. It has survived not only five centuries, but also the leap into
-                    electronic typesetting,
-                    remaining essent
-                </p>
-            </div>
 
-            <div class="subject-pictures">
-                <a href="#" onclick="return false;" class="subjects">HTML</a>
-                <a href="#" onclick="return false;" class="subjects">CSS</a>
-                <a href="#" onclick="return false;" class="subjects">JavaScript</a>
-            </div>
-            <div class="buttons">
-                <button type="button" class="button liveBtn">
-                    See live <img src="./icons/Icon - Export.svg" alt="">
-                </button>
-                <button type="button" class="button sourceBtn">
-                    See source <img src="./icons/Frame.png" alt="">
-                </button>
+
+
+            <div class="popupfooter">
+                <div class="about-job">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                        of type and scrambled it 1960s. Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry.
+
+                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                        printer took a galley of type and scrambled it 1960s with the releorem Ipsum is simply dummy
+                        text of the printing and typesetting industry. Lorem Ipsum han printer took a galley of type and
+                        scrambled it 1960s with the releawn printer took a galley of type and scrambled it 1960s.
+                    </p>
+                </div>
+                <div class="right-box">
+                    <div class="subject-pictures">
+                        <a href="#" onclick="return false;" class="subjects">HTML</a>
+                        <a href="#" onclick="return false;" class="subjects">CSS</a>
+                        <a href="#" onclick="return false;" class="subjects">JavaScript</a>
+                    </div>
+                    <div class="divider">
+                        <img src="./images/Vector 4.png" alt="">
+                    </div>
+                    <div class="buttons">
+                        <button type="button" class="button liveBtn">
+                            See live <img src="./icons/Icon - Export.svg" alt="">
+                        </button>
+                        <button type="button" class="button sourceBtn">
+                            See source <img src="./icons/Frame.png" alt="">
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
