--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         </div>
     </section>
     <section id="contactSection" class="form-section">
-        <form action="https://formspree.io/f/mknllnbq" method="post">
+        <form action="https://formspree.io/f/mknllnbq" method="post" onsubmit="return validateForm()">
 
             <h1 class="contact-me">Contact me</h1>
 
@@ -284,6 +284,7 @@
                 required></textarea>
 
             <button type="submit" class="button">Get in touch</button>
+            <div id="error-message"></div>
         </form>
     </section>
     <!-- mobile menu -->
