fix linter error

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         </div>
     </section>
     <section id="contactSection" class="form-section">
-        <form action="https://formspree.io/f/mknllnbq" method="post" onsubmit="return validateForm()">
+        <form action="https://formspree.io/f/mknllnbq" method="post">
 
             <h1 class="contact-me">Contact me</h1>
 
@@ -283,7 +283,7 @@
             <textarea name="message" id="message" placeholder="Write your message here..." maxlength="500"
                 required></textarea>
 
-            <button type="submit" class="button">Get in touch</button>
+            <button type="submit" class="submit-button">Get in touch</button>
             <div id="error-message"></div>
         </form>
     </section>
