fix linter error

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         </div>
     </section>
     <section id="contactSection" class="form-section">
-        <form action="https://formspree.io/f/mknllnbq" method="post">
+        <form action="https://formspree.io/f/mknllnbq" method="post" onsubmit="return validateForm()">
 
             <h1 class="contact-me">Contact me</h1>
 
